--- a/index.html
+++ b/index.html
@@ -3,19 +3,43 @@
     <head>
         <meta charset="utf-8">
         <title>re01</title>
+        <style>
+            p {background-color: yellow;
+            }
+            #id {
+                color: red;
+            }
+            .myclass {
+                background-color: blue;
+            }
+
+        </style>
     </head>
-    <body>
-        <div style="background-color: #f1f1f1; text-align: center; padding: 40px;">
+    <body style="display: block;border: 1px solid red; margin: 8px;">
+        <div
+            style="background-color: #f1f1f1;
+            text-align: center;
+            padding: 40px;">
             <img src="https://kangwenchang.com/logo.png" alt="康文昌" width="80px" height="80px" />
         </div>
-        <div style="width: 700px ; margin:30px auto; padding:15px; line-height: 1.7;">
-            <p>我是正文</p>
-            <p>我是正文</p>
-            <p>我是正文</p>
+        <div
+            style="width: 700px ;
+            margin:30px auto;
+            padding:15px;
+            line-height: 1.7;">
+            <p
+                style="background-color: #00FF00;">
+            我是正文</p>
+            <p id="myid">p myid</p>
+            <p>我是正文132123</p>
         </div>
-        <div style="background-color: #f1f1f1; text-align: center; padding: 40px; font-size: 12px;">
-            <p>我的网站</p>
+        <div
+            style="background-color: #f1f1f1;
+            text-align: center;
+            padding: 40px;
+            font-size: 12px;">
+            <p class="myclass">p myclass</p>
             <a href="https://kangwenchang.com/">友情链接</a>
-        </div>
+        </div><div></div>
     </body>
 </html>
